--- a/Splash_Screen/app/src/main/res/layout/activity_second.xml
+++ b/Splash_Screen/app/src/main/res/layout/activity_second.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/mainbg"
     tools:context=".SecondActivity">
 
     <androidx.appcompat.widget.Toolbar
