--- a/MapsLogin/app/src/main/res/layout/activity_sign_in.xml
+++ b/MapsLogin/app/src/main/res/layout/activity_sign_in.xml
@@ -45,7 +45,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etPassword"
+            android:id="@+id/etpassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Password"
