--- a/MapsLogin/app/src/main/res/layout/activity_main.xml
+++ b/MapsLogin/app/src/main/res/layout/activity_main.xml
@@ -84,25 +84,17 @@
         android:layout_marginStart="30dp"/>
 
     <Button
-<<<<<<< HEAD
-        android:id="@+id/Signupbtn"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Sign Up"
-=======
         android:id="@+id/loginbtn"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Log In"
->>>>>>> 2e270ec7b9c5331dac69b1d67fb58bbdab459960
         android:backgroundTint="@color/black"
         app:layout_constraintTop_toBottomOf="@id/checkBoxRememberMe"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-<<<<<<< HEAD
+
     <TextView
         android:id="@+id/Sigintext"
         android:layout_width="wrap_content"
@@ -113,9 +105,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Signupbtn"
-        app:layout_constraintVertical_bias="0.095" />
+        app:layout_constraintTop_toBottomOf="@+id/loginbtn"
+        app:layout_constraintVertical_bias="0.115" />
 
-=======
->>>>>>> 2e270ec7b9c5331dac69b1d67fb58bbdab459960
 </androidx.constraintlayout.widget.ConstraintLayout>
