--- a/SajniApp/app/src/main/res/layout/activity_main.xml
+++ b/SajniApp/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,8 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="300dp"
-        android:layout_height="281dp"
+        android:layout_width="225dp"
+        android:layout_height="200dp"
         android:layout_gravity="center"
         android:layout_marginTop="150dp"
         app:srcCompat="@drawable/sajni_logo" />
@@ -26,16 +26,17 @@
         android:textStyle="bold"
         android:textSize="50dp"
         android:text="Sajni" />
-<!--    <TextView-->
-<!--        android:id="@+id/subtitle"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginHorizontal="40dp"-->
-<!--        android:layout_marginTop="10dp"-->
-<!--        android:gravity="center"-->
-<!--        android:text="Discover sustainable products for a greener lifestyle."-->
-<!--        android:textSize="20dp"-->
-<!--        android:textStyle="bold" />-->
+    <TextView
+        android:id="@+id/subtitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:fontFamily="serif"
+        android:textColor="@color/NavyBlue"
+        android:textStyle="bold"
+        android:textSize="20dp"
+        android:layout_marginHorizontal="40dp"
+        android:text="Backbone of Our Nation's Heroes" />
 
 
 </LinearLayout>
