--- a/listview2/app/src/main/res/layout/eachitem.xml
+++ b/listview2/app/src/main/res/layout/eachitem.xml
@@ -39,7 +39,7 @@
 
     <TextView
         android:layout_marginTop="25dp"
-        android:id="@+id/textView"
+        android:id="@+id/chatTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
